# CalculatorTDD

./: .clang-format  .clang-tidy  CMakeLists.txt
include/: Calculator.hpp
src/: Calculator.cpp
test/tests/: CalculatorTest.cpp
